# CMA-ES

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  README.txt  SUMMARY.txt  cma_es.py  coco_eval_graph.py  coco_eval_table.py  graph_generator.py  graph_summarizer.py  main.py  model.py  optimization.py  optimization_reinforcement.py  optimization_transfer.py  pipeline-generate_graphs.bat  pipeline-generate_tables.bat  pipeline-tabpfn_cma_es.bat  pipelines.bat  pipelines_pfn_sur.bat  pyproject.toml  ratio.py  requirements.txt  ruff.toml  run_lq_cma_es.bat  run_my_cma_es-without_save.bat  run_my_cma_es.bat  scaler.py  show_results.py  table_summarizer.py
examples/: run_coco_experiment.py  run_coco_experiment_ca_pfn.py  run_coco_experiment_dts_pfn.py  run_coco_experiment_pfn_sur.py
results/: MY-CMA-ES-1.txt  MY-CMA-ES-10.txt  MY-CMA-ES-11.txt  MY-CMA-ES-12.txt  MY-CMA-ES-13.txt  MY-CMA-ES-14.txt  MY-CMA-ES-15.txt  MY-CMA-ES-16.txt  MY-CMA-ES-17.txt  MY-CMA-ES-18.txt  MY-CMA-ES-19.txt  MY-CMA-ES-2.txt  MY-CMA-ES-20.txt  MY-CMA-ES-21.txt  MY-CMA-ES-22.txt  MY-CMA-ES-23.txt  MY-CMA-ES-24.txt  MY-CMA-ES-3.txt  MY-CMA-ES-4.txt  MY-CMA-ES-5.txt  MY-CMA-ES-6.txt  MY-CMA-ES-7.txt  MY-CMA-ES-8.txt  MY-CMA-ES-9.txt
scripts/local/: analyze_fixed_vs_pfn.py  surrogate_usage_distribution.py
src/pfn_cmaes/: __init__.py  config.py  experiment.py  history.py  interfaces.py  metrics.py  types.py
src/pfn_cmaes.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
temp/: main.py  optimization.py
tests/: test_metric.py  test_pfn_config.py
(+270 files in other folders)
